Fix gpgsm processes being leaked due to QGpgME::KeyListJob not being deleted

BUG: 183875
FIXED-IN: 17.04